Ensure icons don't overflow within table column

--- a/web/src/components/Table/styles.scss
+++ b/web/src/components/Table/styles.scss
@@ -24,4 +24,9 @@
   .hard {
     background-color: #d9534f;
   }
+
+  .companies {
+    justify-content: space-evenly;
+    margin: 0;
+  }
 }
